# modern-python-test

./: .flake8  .gitignore  README.md  noxfile.py  pyproject.toml
docs/: conf.py  reference.rst
src/modern_python_test/: __init__.py  console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
