[tool.poetry]
name = "modern-python-test"
version = "0.1.0"
description = "A modern python setup test"
authors = ["Sebastian Hurtado <sebassdc@gmail.com>"]

[tool.poetry.scripts]
modern-python-cli = "modern_python_test.console:main"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.10.0"
pytest-mock = "^3.1.1"
black = "^19.10b0"
flake8 = "^3.8.3"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.0"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"

[tool.coverage.paths]
source = ['src', '*/site-packages']

[tool.coverage.run]
branch = true
source = ['modern_python_test']

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
